# islands

./: .gitignore  CLAUDE.md  CONCEPT_SIGNATURES.md  ISLANDS_TODO.md  MAINTENANCE.md  aqua.py  contexting1_2_.txt  english_language_code_object.py  flowchart1.xml  main.py  narrative_chain_iterator_system.py  proc_streamer_legacy_ui.py  proc_streamer_v1_6.py  pyproject.toml  simple_word_processor.py  story_world_pyside6.py  thin-wrapper-patterns.py  unified_console_tab.py
.claude/: settings.local.json
Mechanics/everything/: embedding.py  hero_quest_chronicle.py  integration_example.py  lookahead.py  lookahead_system.py  narrative.py  (+5 more)
PySide6.QtWidgets.QTextEdit - Qt for Python_files/: pyside-vselect.js  qt_style.css
_old/: PySide6.QtWidgets.QTextEdit - Qt for Python.htm  pyside6_visual_reference.html
aqua/: dock_layout.py  document.py  prompt_stage.py
chpt-island-engine/: CLAUDE_HANDOFF.md  bootstrap.py  requirements.txt
claude/: Claudes_world.md
claude-add/: ADDING_NEW_CONCEPTS.md  SIGNBOOK_QUICK_REF.md  UNIVERSAL_SIGNBOOK_GUIDE.md  UNIVERSAL_SIGNBOOK_README.md  install_signbook.bat  install_signbook.ps1  signbook_init.py
docs/: CHAT_VERBATIM_FULL.md  claude-chat.md
files(8)/: graph_core.py  graph_walker.py
inage-text/: island_engine_design.md
infocom-transfer/: INFOCOM_PROJECT_PROMPT.md  infocom-archon-lighthouse.md  infocom-vetrellis-lighthouse-complete.md
island-engine/: .env.example  README.md
launcher/: launcher.py  test_script.py
loopback/loopback/: Audio_Loopback_Router_Project_Document.docx  CMakeLists.txt  Main.cpp  MainComponent.h  MainComponent_Phase1.cpp  MainComponent_Phase2.cpp  MainComponent_Phase2.h  QUICKSTART.md  README.md  setup_juce_project.sh
matts/: __init__.py  context_serialization.py  generator_system.py
pine/: ARCHITECTURE.md  __init__.py
pine-research/: README.md
sandbar/: BUILD.md  README.md  STRUCTURE.md  TODO.md  __init__.py
(+189 files in other folders)
